<resources>

    <string name="nav_title_record">Record</string>
    <string name="nav_title_recordings">Recordings</string>
    <string name="nav_title_settings">Settings</string>

    <string name="btn_rec_desc">Record</string>
    <string name="btn_pause_desc">Pause</string>

    <string name="rec_service_desc">Records audio from the microphone</string>
    <string name="recordings_list_action_rename">Rename</string>
    <string name="recordings_list_action_delete_forever">Delete forever</string>
    <string name="recordings_list_action_trash">Move to trash</string>
    <string name="recordings_list_title">Recordings</string>
    <string name="recordings_list_action_share">Share</string>
    <string name="recordings_list_choose_new_name">Type new name</string>
    <string name="new_name">New name</string>
    <string name="prefs_stop_recording_on_low_battery">Stop recording on low battery</string>
    <string name="prefs_stop_recording_on_low_storage">Stop recording on low storage</string>
    <string name="prefs_pause_recording_on_incoming_call">Pause recording on incoming call</string>
    <string name="prefs_recording_control">Recording control</string>
    <string name="prefs_about_app_legal_documents"><![CDATA[About app & legal documents]]></string>
    <string name="prefs_github_repository">Github Repository</string>
    <string name="prefs_github_repo_summary"><![CDATA[Report bugs, suggest improvements & view source code]]></string>

    <string name="stop_on_low_battery_pref_key" translatable="false">pause_on_low_battery</string>
    <string name="stop_on_low_storage_pref_key" translatable="false">pause_on_storage</string>
    <string name="pause_on_call_pref_key" translatable="false">pause_on_call</string>
    <string name="permissions_rationale">The app needs audio recording permission to work. In addition, the notification permission is needed to notify you if a recording is continuing in background after you left the app, or if an ongoing recording was stopped due to running out of battery or storage.</string>
    <string name="permissions_rationale_grant_in_settings">%1$s\n\nYou need to grant the permissions manually in the Settings.</string>
    <string name="phone_state_permission_rationale">In order to pause recording on incoming phone call, the app needs the permission to read phone state.</string>

    <string name="crash_copy_stacktrace">Copy crash data</string>
    <string name="crash_stacktrace_copied">Crash data copied</string>
    <string name="github_bug_reporting_url" translatable="false">https://github.com/Leonidius20/RecordingStudio/issues</string>
    <string name="crash_explanation">The app has crashed. If you want to report this crash, please copy the crash data to the clipboard, create an issue on GitHub explaining the circumstances of the crash, and paste the crash data into the description.</string>

    <string name="pref_audio_source_key" translatable="false">audio_source</string>
    <string name="pref_output_format_key" translatable="false">output_format</string>
    <string name="pref_encoder_key">codec</string>
    <string name="settings_app_version">App version</string>
    <string name="settings_app_flavor">App flavor</string>
    <string name="settings_build_type">Build type</string>
    <string name="notif_recording_in_progress">Recording in progress</string>
    <string name="notif_recording_paused">Recording is paused</string>
    <string name="notif_action_pause">Pause</string>
    <string name="notif_action_resume">Resume</string>
    <string name="notif_action_stop">Stop</string>
    <string name="btn_audio_settings_desc">Audio Settings</string>
    <string name="btn_rec_stop_desc">Stop</string>

    <string name="num_channels_pref_key" translatable="false">num_channels</string>
    <string name="audio_settings_title_audio_source">Audio source</string>
    <string name="audio_settings_description_audio_source">Determines the kind of processing applied to audio by the device</string>
    <string name="audio_settings_title_container">Container format</string>
    <string name="audio_settings_title_codec">Codec</string>
    <string name="audio_settings_hint_codec">Available codecs depend on the chosen container format</string>
    <string name="audio_settings_title_channels">Channels</string>
    <string name="audio_settings_channels_value_mono">Mono</string>
    <string name="audio_settings_channels_value_stereo">Stereo</string>
    <string name="audio_settings_description_channels">Some devices may not support stereo recording</string>
    <string name="recs_list_action_mode_num_selected">%1$d selected</string>
    <string name="recordings_list_empty">There are no recordings yet</string>
    <string name="audio_settings_title_sample_rate">Sample rate</string>
    <string name="sample_rate_pref_key" translatable="false">sample_rate_pref_key</string>
    <string name="audio_settings_hint_sample_rate">Available sample rates depend on the chosen codec</string>
    <string name="audio_settings_title_bit_depth">Bit Depth</string>
    <string name="selector_previous_value">Previous value</string>
    <string name="selector_next_value">Next value</string>
    <string name="audio_settings_title_bit_rate">Bitrate</string>
    <string name="value_in_kbps" translatable="false">%1$s kbps</string>
    <string name="file_delete_failure">Failed to delete files</string>
    <string name="recordings_list_action_edit">Edit recording</string>
</resources>