<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="recording_control_category"
        app:title="@string/prefs_recording_control">

        <SwitchPreferenceCompat
            app:key="@string/stop_on_low_battery_pref_key"
            app:title="@string/prefs_stop_recording_on_low_battery"
            app:defaultValue="@bool/stop_on_low_battery_default"/>

        <SwitchPreferenceCompat
            app:key="@string/stop_on_low_storage_pref_key"
            app:title="@string/prefs_stop_recording_on_low_storage"
            app:defaultValue="@bool/stop_on_storage_default"/>

        <SwitchPreferenceCompat
            app:key="@string/pause_on_call_pref_key"
            app:title="@string/prefs_pause_recording_on_incoming_call"
            app:defaultValue="@bool/pause_on_call_default"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="about_app"
        app:title="@string/prefs_about_app_legal_documents">

        <Preference
            app:key="github_repo"
            app:title="@string/prefs_github_repository"
            app:summary="@string/prefs_github_repo_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/Leonidius20/RecordingStudio" />

        </Preference>

        <Preference
            app:key="app_version"
            app:title="@string/settings_app_version"
            app:summary="@string/version_name"/>

        <Preference
            app:key="app_flavor"
            app:title="@string/settings_app_flavor"
            app:summary="@string/flavor_name"/>

        <Preference
            app:key="app_build_type"
            app:title="@string/settings_build_type"
            app:summary="@string/build_type_name"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>