<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_record">

    <fragment
        android:id="@+id/navigation_record"
        android:name="io.github.leonidius20.recorder.ui.home.HomeFragment"
        android:label="@string/nav_title_record"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_recordings_list"
        android:name="io.github.leonidius20.recorder.ui.recordings_list.view.RecordingsListFragment"
        android:label="@string/nav_title_recordings"
        tools:layout="@layout/fragment_recordings_list" >
        <action
            android:id="@+id/action_navigation_recordings_list_to_renameDialogFragment"
            app:destination="@id/renameDialogFragment" />
        <action
            android:id="@+id/action_recordings_list_to_edit_recording"
            app:destination="@id/navigation_edit_recording" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="io.github.leonidius20.recorder.ui.settings.SettingsFragment"
        android:label="@string/nav_title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_plugins_list"
            app:destination="@id/navigation_plugins_list"/>
    </fragment>

    <dialog
        android:id="@+id/renameDialogFragment"
        android:name="io.github.leonidius20.recorder.ui.recordings_list.view.RenameDialogFragment"
        android:label="RenameDialogFragment" >
        <argument
            android:name="fileToRename"
            app:argType="android.net.Uri" />
        <argument
            android:name="currentFileName"
            app:argType="string" />
        <argument
            android:name="id"
            app:argType="long" />
    </dialog>

    <fragment
        android:id="@+id/navigation_plugins_list"
        android:name="io.github.leonidius20.recorder.ui.editing.plugins_list.view.PluginsListFragment"
        android:label="PluginsListFragment"
        tools:layout="@layout/fragment_plugins_list" >

        <action
            android:id="@+id/action_plugins_list_to_details"
            app:destination="@id/nav_plugin_details"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_edit_recording"
        android:name="io.github.leonidius20.recorder.ui.editing.main.view.EditRecordingFragment">

        <argument
            android:name="fileToEdit"
            app:argType="android.net.Uri" />

    </fragment>

    <fragment
        android:id="@+id/nav_plugin_details"
        android:name="io.github.leonidius20.recorder.ui.editing.plugin.view.PluginDetailsFragment">

        <argument
            android:name="pluginId"
            app:argType="string" />

    </fragment>


</navigation>